--- a/SalesWebMvc/Views/Sellers/Index.cshtml
+++ b/SalesWebMvc/Views/Sellers/Index.cshtml
@@ -6,6 +6,10 @@
 
 <h1>@ViewData["Title"]</h1>
 
+<p>
+    <a asp-action="Create" class="btn btn-primary">Create</a>
+</p>
+
 <table class="table table-striped table-hover">
     <thead>
         <tr class="bg-primary">
