--- a/SalesWebMvc/Views/Sellers/Index.cshtml
+++ b/SalesWebMvc/Views/Sellers/Index.cshtml
@@ -12,7 +12,7 @@
 
 <table class="table table-striped table-hover">
     <thead>
-        <tr class="bg-primary">
+        <tr class="thead-dark">
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
